[tool.poetry]
name = "natedhaliwal"
version = "1.1.1"
description = "A simple package to help code Python easier."
authors = ["Nate Dhaliwal <nathaniel.shaan@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]
license = "MIT"
repository = "https://github.com/NateDhaliwal/NateDhaliwal-Package"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/NateDhaliwal/NateDhaliwal-Package/issues"
Replit = "https://replit.com/@NateDhaliwal/natedhaliwalpackage"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"